src/objects/Event_Rewind__c.object
<CustomObject>
    <fields>
        <fullName>Events_Opened__c</fullName>
        <label>Events Opened</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Event Rewinds</relationshipLabel>
        <relationshipName>Event_Rewinds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RewindType__c</fullName>
        <label>RewindType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre Submission</fullName>
                </value>
                <value>
                    <fullName>Post Submission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rewind_Comments__c</fullName>
        <label>Rewind Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rewind_Reason__c</fullName>
        <label>Rewind Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change of finance amount</fullName>
                </value>
                <value>
                    <fullName>Change of term</fullName>
                </value>
                <value>
                    <fullName>Missed information/addresses taken incorrectly and amended</fullName>
                </value>
                <value>
                    <fullName>Re-key of Budget Planner following return of application form</fullName>
                </value>
                <value>
                    <fullName>Re-issue of Offer Letter</fullName>
                </value>
                <value>
                    <fullName>Product Switch Rewind</fullName>
                </value>
                <value>
                    <fullName>Product suitability needs to be reviewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RewoundBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RewoundBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Rewinds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RewoundDate__c</fullName>
        <label>RewoundDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rewound_From_Stage__c</fullName>
        <label>Rewound From Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rewound_From_Status__c</fullName>
        <label>Rewound From Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rewound_To_Stage__c</fullName>
        <label>Rewound To Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rewound_To_Status__c</fullName>
        <label>Rewound To Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rewound_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rewound To</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event Rewinds</relationshipLabel>
        <relationshipName>Event_Rewinds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Rewind</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RewoundBy__c</columns>
        <columns>RewoundDate__c</columns>
        <columns>RewindType__c</columns>
        <columns>Rewind_Reason__c</columns>
        <columns>Rewind_Comments__c</columns>
        <columns>Rewound_From_Stage__c</columns>
        <columns>Rewound_To_Stage__c</columns>
        <columns>Rewound_From_Status__c</columns>
        <columns>Rewound_To_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RW-{00000}</displayFormat>
        <label>Event Rewind Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Rewinds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>